--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
